# transformer-from-scratch

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: train.sh
tests/: test_model.py
transformer/: __init__.py  config.py  dataset.py  model.py  train.py  translate.py  validate.py
